<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    android:background="@drawable/background"
    tools:context=".DangKyActivity">

    <TextView
       android:id="@+id/txtRong"
        android:layout_width="match_parent"
        android:layout_height="200dp" />

    <LinearLayout
        android:layout_marginTop="10dp"
        android:layout_below="@+id/txtRong"
        android:id="@+id/layoutnhapvao"
        android:padding="20dp"
        android:orientation="vertical"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <EditText
            android:textAlignment="center"
            android:hint="@string/hint_tendangky"
            android:background="@drawable/user"
            android:id="@+id/txtNhapUserDK"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <EditText
            android:layout_marginTop="10dp"
            android:inputType="textPassword"
            android:textAlignment="center"
            android:hint="@string/hint_matkhaudangky"
            android:background="@drawable/user"
            android:id="@+id/txtNhappasswordDK"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <EditText
            android:layout_marginTop="10dp"
            android:id="@+id/txtNhaplaipasswordDK"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/user"
            android:hint="@string/hitn_matkhaudangky2"
            android:inputType="textPassword"
            android:textAlignment="center" />
        <Button
            android:layout_marginTop="20dp"
            android:layout_gravity="center_horizontal"
            android:textColor="#000"
            android:text="@string/btn_dang_ky_2"
            android:id="@+id/btnDangKyTaiKhoang"
            android:background="@drawable/btndangnhap"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <TextView
        android:textSize="40sp"
        android:textColor="#fff"
        android:text="@string/txt_dang_ky"
        android:layout_centerHorizontal="true"
        android:layout_above="@+id/layoutnhapvao"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</RelativeLayout>